# memoria

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: chinese-promotion.md  show-hn-post.md
examples/: basic_usage.py  graph_query.py  with_decay.py
src/memoria/: __init__.py
src/memoria/cli/: main.py
src/memoria/core/: config.py  exceptions.py  memoria.py  models.py
src/memoria/embedding/: base.py
src/memoria/engines/: awareness.py  contradiction_provider.py  decay.py  feedback.py  graph.py  orchestrator.py
src/memoria/storage/: base.py  memory_adapter.py  pgvector_adapter.py  router.py
tests/: test_contradiction.py  test_engines.py  test_graph_engine.py  test_integration.py
