[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoria-agent"
version = "0.2.0"
description = "Production-grade memory infrastructure for AI agents — storage-agnostic, self-evolving, observable."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Memoria Authors"}]
keywords = ["ai", "agent", "memory", "llm", "vector-database", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "openai>=1.0",
    "tiktoken>=0.5",
    "rich>=13.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
lancedb = ["lancedb>=0.17", "numpy>=1.24", "pyarrow>=12.0"]
qdrant = ["qdrant-client>=1.9"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3"]
elasticsearch = ["elasticsearch[async]>=8.0"]
neo4j = ["neo4j>=5.0"]
redis = ["redis>=5.0", "hiredis>=2.0"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12.0"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = [
    "memoria[qdrant,pgvector,elasticsearch,neo4j,redis,server,dashboard,dev]",
]

[project.scripts]
memoria = "memoria.cli.main:main"

[project.urls]
Homepage = "https://github.com/Oxygen56/memoria"
Documentation = "https://memoria.dev"
Repository = "https://github.com/Oxygen56/memoria"
Issues = "https://github.com/Oxygen56/memoria/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memoria"]
only-include = ["src/memoria"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
